audio-resampler: Fix integer overflow in clamping code

https://bugzilla.gnome.org/show_bug.cgi?id=777921